# mingw-cmake-env

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  package.sh  pkg.sh  run.sh
.github/workflows/: build.yml  clean.yml  rmpkg.yml
mpv-package/scripts/: reload.lua
toolchain/: CMakeLists.txt  binutils.cmake  exec-nicf.in  exec-nlto.in  exec-noicf.in  exec-nolto.in  exec-plite.in  exec.in  gcc-0001-libcc1-include-pthread.patch  gcc-0001-musl-cc1-poison-calloc.patch  gcc-0002-posix-memalign.patch  gcc-0003-vmov.patch  gcc-base.cmake  gcc.cmake  gendef.cmake  llvm.cmake  meson_cross.txt.in  mingw-w64-crt.cmake  mingw-w64-headers.cmake  mingw-w64.cmake  toolchain.cmake.in  widl.cmake  winpthreads.cmake  xxx.patch
toolchain/mingw-headers/: d3dkmthk.h  d3dukmdt.h
